Update Qiskit Transpiler Service docs

--- a/docs/api/qiskit-transpiler-service/transpiler_service.mdx
+++ b/docs/api/qiskit-transpiler-service/transpiler_service.mdx
@@ -18,7 +18,7 @@ python_api_name: qiskit_transpiler_service.transpiler_service
 
 ## Classes
 
-|                                                                                                                                                                                         |   |
-| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | - |
-| [`TranspilerService`](qiskit_transpiler_service.transpiler_service.TranspilerService "qiskit_transpiler_service.transpiler_service.TranspilerService")(optimization\_level\[, ai, ...]) |   |
+|                                                                                                                                                                                         |                                         |
+| --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------- |
+| [`TranspilerService`](qiskit_transpiler_service.transpiler_service.TranspilerService "qiskit_transpiler_service.transpiler_service.TranspilerService")(optimization\_level\[, ai, ...]) | Class for using the transpiler service. |
 
