--- a/docs/api/qiskit-transpiler-service/utils.mdx
+++ b/docs/api/qiskit-transpiler-service/utils.mdx
@@ -20,11 +20,28 @@ python_api_name: qiskit_transpiler_service.utils
 
 ### create\_random\_linear\_function
 
-<Function id="qiskit_transpiler_service.utils.create_random_linear_function" signature="qiskit_transpiler_service.utils.create_random_linear_function(n_qubits: int, seed: int = 123) → LinearFunction" />
+<Function id="qiskit_transpiler_service.utils.create_random_linear_function" signature="qiskit_transpiler_service.utils.create_random_linear_function(n_qubits, seed=123)">
+  **Parameters**
+
+  *   **n\_qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) –
+  *   **seed** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")) –
+
+  **Return type**
+
+  [*LinearFunction*](/api/qiskit/qiskit.circuit.library.LinearFunction "(in Qiskit v1.1)")
+</Function>
 
 ### get\_metrics
 
-<Function id="qiskit_transpiler_service.utils.get_metrics" signature="qiskit_transpiler_service.utils.get_metrics(qc: QuantumCircuit) → dict[str, int]">
+<Function id="qiskit_transpiler_service.utils.get_metrics" signature="qiskit_transpiler_service.utils.get_metrics(qc)">
   Returns a dict with metrics from a QuantumCircuit
+
+  **Parameters**
+
+  **qc** ([*QuantumCircuit*](/api/qiskit/qiskit.circuit.QuantumCircuit "(in Qiskit v1.1)")) –
+
+  **Return type**
+
+  [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.12)")\[[str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)"), [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")]
 </Function>
 
