--- a/docs/verify/simulate-with-qiskit-aer.ipynb
+++ b/docs/verify/simulate-with-qiskit-aer.ipynb
@@ -9,11 +9,12 @@
     "\n",
     "[Exact simulation with Qiskit primitives](simulate-with-qiskit-primitives) demonstrates how to use the reference primitives included with Qiskit to perform exact simulation of quantum circuits. Currently existing quantum processors suffer from errors, or noise, so the results of an exact simulation do not necessarily reflect the results you would expect when running circuits on real hardware. While the reference primitives in Qiskit do not support modeling noise, [Qiskit Aer](https://qiskit.org/ecosystem/aer/) includes implementations of the primitives that do support modeling noise. Qiskit Aer is a high-performance quantum circuit simulator that you can use in place of the reference primitives for better performance and more features. It is part of the [Qiskit Ecosystem](https://qiskit.github.io/ecosystem/). In this article, we demonstrate the use of Qiskit Aer primitives for exact and noisy simulation.\n",
     "\n",
-    "<Admonition>\n",
-    "The Qiskit Aer primitives do not yet support the V2 interface.  To use the Aer simulator with V2 primitives, use the [Qiskit Runtime local testing mode](local-testing-mode) instead.\n",
+    "<Admonition type=\"note\" title=\"Notes\">\n",
+    "- V2 interface support requires `qiskit-aer` 0.14 or later.\n",
+    "- While Qiskit Aer primitives implement the primitive interfaces, they do not provide the same options as Qiskit Runtime primitives. Resilience level, for example, is not available with Qiskit Aer primitives.\n",
     "</Admonition>\n",
     "\n",
-    "Let's create an example circuit on eight qubits."
+    "To explore exact and noisy simulation, create an example circuit on eight qubits:"
    ]
   },
   {
