--- a/docs/transpile/qiskit-transpiler-service.mdx
+++ b/docs/transpile/qiskit-transpiler-service.mdx
@@ -36,7 +36,7 @@ By default, the package tries to authenticate to IBM Quantum services with the d
 - `ai` ("true", "false", "auto") - Whether to use AI capabilities during transpilation. The AI capabilities available can be for `AIRouting` transpiling passes or other AI synthesis methods. If this value is `"true"`, the service applies different AI-powered transpiling passes depending on the `optimization_level` requested. If it's `"false"` it uses latest Qiskit transpiling features without AI. Finally, if it's `"auto"` the service will decide automatically whether to apply the standard Qiskit heuristic passes or the new AI-powered passes based on the particulars of your circuit.
 - `qiskit_transpile_options` (dict) - A Python dictionary object that can include any other option that is valid in the [Qiskit `transpile()` method](defaults-and-configuration-options). If the `qiskit_transpile_options` input includes `optimization_level`, it is discarded in favor of the `optimization_level` specified as parameter input. If the `qiskit_transpile_options` includes any option not recognized by the Qiskit `transpile()` method, the library raises an error.
 
-To get more info about the `qiskit-transpiler-service` available methods, check out the [qiskit-transpiler-service API reference](https://docs.quantum.ibm.com/api/qiskit-transpiler-service). To know more about the service API, check out the [Qiskit Transpiler Service REST API documentation](https://docs.quantum.ibm.com/api/qiskit-transpiler-service-rest)
+To get more info about the `qiskit-transpiler-service` available methods, check out the [qiskit-transpiler-service API reference](/api/qiskit-transpiler-service). To know more about the service API, check out the [Qiskit Transpiler Service REST API documentation](/api/qiskit-transpiler-service-rest)
 
 ## Examples
 
