--- a/docs/transpile/ai-transpiler-passes.mdx
+++ b/docs/transpile/ai-transpiler-passes.mdx
@@ -105,13 +105,4 @@ These custom collection passes limit the sizes of the collected sub-circuits so 
 
 ## Citation
 
-If you use any AI feature from the Qiskit transpiler service in your research, here is the recommended citation
-
-```
-@misc{2405.13196,
-Author = {David Kremer and Victor Villar and Hanhee Paik and Ivan Duran and Ismael Faro and Juan Cruz-Benito},
-Title = {Practical and efficient quantum circuit synthesis and transpiling with Reinforcement Learning},
-Year = {2024},
-Eprint = {arXiv:2405.13196},
-}
-```
+If you use any AI feature from the Qiskit transpiler service in your research, check out [the recommended citation](./qiskit-transpiler-service#citation).
