--- a/docs/api/qiskit-ibm-runtime/dev/index.mdx
+++ b/docs/api/qiskit-ibm-runtime/dev/index.mdx
@@ -1,3 +1,8 @@
+---
+title: Qiskit Runtime IBM Client API Docs
+description: API documentation for the qiskit-ibm-runtime client
+---
+
 # qiskit-ibm-runtime API reference
 
 *   [Qiskit Runtime (`qiskit_ibm_runtime`)](runtime_service)
@@ -5,3 +10,4 @@
 *   [Transpiler passes (`qiskit_ibm_runtime.transpiler.passes`)](transpiler)
 *   [Transpiler scheduling passes (`qiskit_ibm_runtime.transpiler.passes.scheduling`)](qiskit_ibm_runtime.transpiler.passes.scheduling)
 *   [Fake Provider (`qiskit_ibm_runtime.fake_provider`)](fake_provider)
+
