--- a/docs/api/migration-guides/local-simulators.mdx
+++ b/docs/api/migration-guides/local-simulators.mdx
@@ -167,7 +167,7 @@ Example:
 ```python
 import numpy as np
 from qiskit.circuit.library import EfficientSU2
-from qiskit_ibm_runtime import Session, QiskitRuntimeService, SamplerV2 as Sampler
+from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler
 
 service = QiskitRuntimeService(channel='ibm_quantum')
 
