--- a/docs/api/migration-guides/local-simulators.mdx
+++ b/docs/api/migration-guides/local-simulators.mdx
@@ -71,7 +71,7 @@ from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
 from qiskit_ibm_runtime.fake_provider import FakeManilaV2
 from qiskit_ibm_runtime import SamplerV2 as Sampler, QiskitRuntimeService
 
-service = QiskitRuntimeService(channel='ibm_quantum')
+service = QiskitRuntimeService()
 
 # Bell Circuit
 qc = QuantumCircuit(2)
