--- a/docs/transpile/qiskit-transpiler-service.mdx
+++ b/docs/transpile/qiskit-transpiler-service.mdx
@@ -26,17 +26,17 @@ pip install qiskit-transpiler-service
 
 By default, the package tries to authenticate to IBM Quantum services with the defined Qiskit API token, and uses your token from the `QISKIT_IBM_TOKEN` environment variable or from the file `~/.qiskit/qiskit-ibm.json` (under the section `default-ibm-quantum`).
 
-*Note*: This package requires Qiskit SDK 1.X by default.
+*Note*: This package requires Qiskit SDK 1.X.
 
 ## qiskit-transpiler-service transpile options
 
 - `backend_name` (optional, str) - A backend name as it would be expected by QiskitRuntimeService (for example, `ibm_sherbrooke`). If this is set, the transpile method uses the layout from the specified backend for the transpilation operation. If any other option is set that impacts these settings, such as `coupling_map`, the `backend_name` settings are overridden.
 - `coupling_map` (optional, List[List[int]]) - A valid coupling map list (for example, [[0,1],[1,2]]). If this is set, the transpile method uses this coupling map for the transpilation operation. If defined, it overrides any value specified for `target`.
 - `optimization_level` (int) - The potential optimization level to apply during the transpilation process. Valid values are [1,2,3], where 1 is the least optimization (and fastest), and 3 the most optimization (and most time-intensive).
-- `ai` ("true", "false", "auto") - Whether to use AI capabilities during transpilation. The AI capabilities available can be for `AIRouting` transpiling passes or other AI synthesis methods. If this value is `"true"`, the service applies different AI-powered transpiling passes depending on the `optimization_level` requested. If it's `"false"` it uses latest Qiskit transpiling features without AI. Finally, if it's `"auto"` the service will decide automatically whether to apply the standard Qiskit heuristic passes or the new AI-powered passes based on the particulars of your circuit.
+- `ai` ("true", "false", "auto") - Whether to use AI capabilities during transpilation. The AI capabilities available can be for `AIRouting` transpiling passes or other AI synthesis methods. If this value is `"true"`, the service applies different AI-powered transpiling passes depending on the `optimization_level` requested. If  `"false"`, it uses the latest Qiskit transpiling features without AI. Finally, if `"auto"`, the service decides whether to apply the standard Qiskit heuristic passes or the AI-powered passes based on your circuit.
 - `qiskit_transpile_options` (dict) - A Python dictionary object that can include any other option that is valid in the [Qiskit `transpile()` method](defaults-and-configuration-options). If the `qiskit_transpile_options` input includes `optimization_level`, it is discarded in favor of the `optimization_level` specified as parameter input. If the `qiskit_transpile_options` includes any option not recognized by the Qiskit `transpile()` method, the library raises an error.
 
-To get more info about the `qiskit-transpiler-service` available methods, check out the [qiskit-transpiler-service API reference](/api/qiskit-transpiler-service). To know more about the service API, check out the [Qiskit Transpiler Service REST API documentation](/api/qiskit-transpiler-service-rest)
+For more information about the available `qiskit-transpiler-service` methods, see the [qiskit-transpiler-service API reference](/api/qiskit-transpiler-service). To learn more about the service API, see the [Qiskit Transpiler Service REST API documentation.](/api/qiskit-transpiler-service-rest)
 
 ## Examples
 
@@ -75,7 +75,7 @@ The following examples demonstrate how to transpile circuits using the Qiskit tr
     transpiled_circuit = cloud_transpiler_service.run(circuit)
     ```
 
-3. Produce a similar circuit and transpile it while letting the service to decide if using the AI-powered transpiling passes.
+3. Produce a similar circuit and transpile it while letting the service to decide whether to use the AI-powered transpiling passes.
 
 
     ```python
@@ -94,7 +94,7 @@ The following examples demonstrate how to transpile circuits using the Qiskit tr
 
 ## Citation
 
-If you use any AI feature from the Qiskit transpiler service in your research, here is the recommended citation
+If you use any AI feature from the Qiskit transpiler service in your research, use the following recommended citation:
 
 ```
 @misc{2405.13196,
