--- a/docs/transpile/qiskit-transpiler-service.mdx
+++ b/docs/transpile/qiskit-transpiler-service.mdx
@@ -26,7 +26,7 @@ pip install qiskit-transpiler-service
 
 By default, the package tries to authenticate to IBM Quantum services with the defined Qiskit API token, and uses your token from the `QISKIT_IBM_TOKEN` environment variable or from the file `~/.qiskit/qiskit-ibm.json` (under the section `default-ibm-quantum`).
 
-*Note*: This package requires Qiskit SDK 1.X.
+*Note*: This package requires Qiskit SDK v1.X.
 
 ## qiskit-transpiler-service transpile options
 
