--- a/docs/transpile/qiskit-transpiler-service.mdx
+++ b/docs/transpile/qiskit-transpiler-service.mdx
@@ -94,7 +94,7 @@ The following examples demonstrate how to transpile circuits using the Qiskit tr
 
 ## Citation
 
-If you use any AI feature from the Qiskit transpiler service in your research, use the following recommended citation:
+If you use any AI-powered feature from the Qiskit transpiler service in your research, use the following recommended citation:
 
 ```
 @misc{2405.13196,
