--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -116,7 +116,7 @@
     "raw_mimetype": "text/restructuredtext"
    },
    "source": [
-    "See [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class) in the documentation for all available operations.\n"
+    "See [`QuantumCircuit`](/api/qiskit/qiskit.circuit.QuantumCircuit#quantumcircuit-class) in the documentation for all available operations."
    ]
   },
   {
@@ -301,7 +301,7 @@
     "  ```python\n",
     "\n",
     "  # Use the following code instead if you want to run on a simulator:\n",
-    "  \n",
+    "\n",
     "  from qiskit_ibm_runtime.fake_provider import FakeAlmadenV2\n",
     "  backend = FakeAlmadenV2()\n",
     "  estimator = Estimator(backend)\n",
@@ -643,7 +643,7 @@
   "celltoolbar": "Raw Cell Format",
   "description": "Get started using Qiskit with IBM Quantum hardware in this Hello World example",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -657,7 +657,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3"
   },
   "title": "Hello world",
   "widgets": {
