Minor fix to reflect this is on beta status

--- a/docs/transpile/ai-transpiler-passes.mdx
+++ b/docs/transpile/ai-transpiler-passes.mdx
@@ -10,7 +10,7 @@ The AI-powered transpiler passes are experimental passes that work as a drop-in 
 
 <Admonition type="note">
     This is an experimental feature available only to the IBM Quantum Premium Plan.
-    The AI-powered transpiler passes are in alpha release status, subject to change.
+    The AI-powered transpiler passes are in beta release status, subject to change.
     If you have feedback or want to contact the developer team, please use this [Qiskit Slack Workspace channel](https://qiskit.slack.com/archives/C06KF8YHUAU).
 </Admonition>
 
