--- a/docs/transpile/qiskit-transpiler-service.mdx
+++ b/docs/transpile/qiskit-transpiler-service.mdx
@@ -11,7 +11,7 @@ The Qiskit transpiler service offers a Python library to seamlessly integrate th
 
 <Admonition type="note">
     This experimental service is only available for IBM Quantum Premium Plan users.
-    The service is an beta release, subject to change.
+    The service is a beta release, subject to change.
     If you have feedback or want to contact the developer team, please use this [Qiskit Slack Workspace channel](https://qiskit.slack.com/archives/C06KF8YHUAU).
 </Admonition>
 
