--- a/docs/guides/execute-on-hardware.mdx
+++ b/docs/guides/execute-on-hardware.mdx
@@ -13,22 +13,21 @@ There are a number of software tools that could be used for this step, you can c
 * [Primitives examples](./primitives-examples)
 
 ### Configure runtime options
-* [Configure runtiem compilation](./configure-runtime-compilation)
+* [Configure runtime compilation](./configure-runtime-compilation)
 * [Configure runtime error mitigation](./configure-error-mitigation)
 * [Advanced runtime options](./advanced-runtime-options)
-
-### Execution modes
-* [Introduction to Qiskit Runtime execution modes](./execution-modes-intro)
-* [Introduction to Qiskit Runtime sessions](./sessions)
+* [Introduction to execution modes](./execution-modes-intro)
+* [Introduction to sessions](./sessions)
 * [Run jobs in a session](./run-jobs-in-session)
 * [Run jobs in a batch](./run-jobs-batch)
-* [FAQs](./execution-modes-faq)
 
 ### Manage jobs
-* [Monitor a job](./monitor-job)
+* [Monitor or cancel a job](./monitor-job)
 * [Estimate job run time](./estimate-job-run-time)
 * [Minimize job run time](./minimize-time)
-* [Maximum execution time for a Qiskit Runtime job or session](./max-execution-time)
+* [Maximum execution time](./max-execution-time)
+* [Retrieve and save results](./save-jobs)
+* [Execution modes FAQs](./execution-modes-faq)
 
 ### Systems and platform information
 * [Processor types](./processor-types)
