--- a/docs/guides/optimize-for-hardware.mdx
+++ b/docs/guides/optimize-for-hardware.mdx
@@ -31,7 +31,7 @@ There are a number of software tools that could be used for this step, you can c
 
 ### Debugging tools
 * [Introduction to debugging tools](./verify)
-* [Exact simulation with Qiskit primitives](./simulate-with-qiskit-primitives)
+* [Exact simulation with Qiskit SDK primitives](./simulate-with-qiskit-sdk-primitives)
 * [Exact and noisy simulation with Qiskit Aer primitives](./simulate-with-qiskit-aer)
 * [Qiskit Runtime local testing mode](./local-testing-mode)
 * [Build noise models](./building-noise-models)
