--- a/docs/guides/simulate-with-qiskit-aer.mdx
+++ b/docs/guides/simulate-with-qiskit-aer.mdx
@@ -61,7 +61,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8870140234256602"
+       "0.875"
       ]
      },
      "execution_count": 2,
@@ -101,7 +101,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7247404214143527"
+       "0.740234375"
       ]
      },
      "execution_count": 3,
@@ -192,10 +192,8 @@
     }
    ],
    "source": [
-    "import math\n",
-    "from qiskit.result import ProbDistribution\n",
+    "from qiskit.quantum_info import hellinger_fidelity\n",
     "from qiskit_aer.primitives import Sampler\n",
-    "\n",
     "\n",
     "measured_circuit = circuit.copy()\n",
     "measured_circuit.measure_all()\n",
@@ -212,18 +210,8 @@
     "noisy_quasis = job.result().quasi_dists[0]\n",
     "noisy_probs = noisy_quasis.nearest_probability_distribution()\n",
     "\n",
-    "\n",
     "# Compute fidelity\n",
-    "def fidelity(dist1: ProbDistribution, dist2: ProbDistribution) -> float:\n",
-    "    result = 0\n",
-    "    for bitstring in dist1 | dist2:\n",
-    "        prob1 = dist1.get(bitstring, 0)\n",
-    "        prob2 = dist2.get(bitstring, 0)\n",
-    "        result += math.sqrt(prob1 * prob2)\n",
-    "    return result**2\n",
-    "\n",
-    "\n",
-    "fidelity(exact_probs, noisy_probs)"
+    "hellinger_fidelity(exact_probs, noisy_probs)"
    ]
   },
   {
