--- a/docs/guides/primitives-get-started.mdx
+++ b/docs/guides/primitives-get-started.mdx
@@ -35,10 +35,11 @@ Because Qiskit Runtime `Estimator` is a managed service, you first need to initi
 Follow the steps in the [Install and set up topic](../start/install) if you don't already have an account.
 
 ```python
-from qiskit_ibm_runtime import QiskitRuntimeService
+from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator
 
 service = QiskitRuntimeService()
 backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)
+estimator = Estimator(backend)
 ```
 
 ### 2. Create a circuit and an observable
@@ -60,7 +61,7 @@ print(f">>> Observable: {observable.paulis}")
 ```
 Output
 ```text
->>> Observable: ['ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ...']
+>>> Observable: ['ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ...']
 ```
     The circuit and observable need to be transformed to only use instructions supported by the system (referred to as *instruction set architecture (ISA)* circuits). We'll use the transpiler to do this.
 
@@ -230,9 +231,6 @@ Output
 >>> Job ID: 58223448-5100-4dec-a47a-942fb30edced
 >>> Job Status: JobStatus.RUNNING
 ```
-
-    You need the classical register name to get the results.  By default, it is named `meas` when you use `measure_all()`. When defining your circuit, if you create one or more classical registers with a non-default name, use that name to get the results. You can find the classical register name by running `<circuit_name>.cregs`. For example, `qc.cregs`.
-
 ```python
 result = job.result()
 
@@ -264,8 +262,8 @@ print(f"  > Metadata: {result.metadata[0]}")
 <span id="backend"></span>
 ## Get started with the backend primitives
 
-The `Sampler` primitive can be run with any provider by using [`qiskit.primitives.BackendSampler`](../api/qiskit/qiskit.primitives.BackendSampler). Likewise, the `Estimator` primitive can be run with any provider using [`qiskit.primitives.BackendEstimator`](../api/qiskit/qiskit.primitives.BackendEstimator). Equivalent implementations in V2 are coming soon.   
-  
+The `Sampler` primitive can be run with any provider by using [`qiskit.primitives.BackendSampler`](../api/qiskit/qiskit.primitives.BackendSampler). Likewise, the `Estimator` primitive can be run with any provider using [`qiskit.primitives.BackendEstimator`](../api/qiskit/qiskit.primitives.BackendEstimator). Equivalent implementations in V2 are coming soon.
+
 Some providers implement primitives natively (see [the Qiskit Ecosystem page](https://qiskit.github.io/ecosystem#provider) for more details).
 
 ### Example: BackendEstimator
