--- a/docs/run/configure-error-mitigation.mdx
+++ b/docs/run/configure-error-mitigation.mdx
@@ -478,6 +478,8 @@ You can turn off all error mitigation and suppression if you are, for example, d
 
 Examples:
 
+<Tabs>
+  <TabItem value="Estimator" label="EstimatorV2">
 Turn off all error mitigation and suppression in EstimatorV2.
 
 ```python
@@ -489,7 +491,8 @@ options = estimator.options
 options.resilience_level = 0
 options.optimization_level = 0
 ```
-
+  </TabItem>
+  <TabItem value="Sampler" label="SamplerV2">
 Turn off all error mitigation and suppression in SamplerV2.
 
 ```python
@@ -500,7 +503,8 @@ options = sampler.options
 # Turn off all error mitigation and suppression
 options.twirling.enable_measure = False
 ```
-
+  </TabItem>
+</Tabs>
 
 ## Next steps
 
