--- a/docs/run/error-mitigation-explanation.ipynb
+++ b/docs/run/error-mitigation-explanation.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "This page provides high-level explanations of the error suppression and error mitigation techniques available through Qiskit Runtime.\n",
     "\n",
-    "The following cell initializes an estimator instance that will be used later for demonstrating how to set error mitigation options."
+    "The following cell imports the Estimator primitive and creates a backend that will be used for initializing the Estimator in later code cells."
    ]
   },
   {
@@ -294,7 +294,6 @@
   }
  ],
  "metadata": {
-  "title": "Error mitigation technique explanations",
   "description": "Explanation of error mitigation techniques available through Qiskit Runtime",
   "kernelspec": {
    "display_name": "Python 3",
@@ -312,7 +311,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "title": "Error mitigation technique explanations"
  },
  "nbformat": 4,
  "nbformat_minor": 5
