--- a/docs/verify/index.mdx
+++ b/docs/verify/index.mdx
@@ -8,7 +8,7 @@ You can test your quantum programs by running them on simulated devices and expl
 
 Quantum simulators can be used to help develop and test programs before fine-tuning them and sending them to quantum hardware. Local simulators can do this with good performance and efficiency.
 
-Because the cost of classically simulating quantum circuits scales exponentially with the number of qubits, circuits that are larger than 50 qubits or so generally cannot be directly debugged. For such circuits, you can:
+Because the cost of classically simulating quantum circuits scales exponentially with the number of qubits, circuits that are larger than 50 qubits or so generally cannot run on simulators. For such circuits, you can:
 
 - Test smaller versions of the circuits that can be simulated classically.
 - Modify the circuits so that they become classically simulable and test these modified circuits.
