--- a/docs/verify/index.mdx
+++ b/docs/verify/index.mdx
@@ -11,7 +11,7 @@ Quantum simulators can be used to help develop and test programs before fine-tun
 Because the cost of classically simulating quantum circuits scales exponentially with the number of qubits, circuits that are larger than 50 qubits or so generally cannot run on simulators. For such circuits, you can:
 
 - Test smaller versions of the circuits that can be simulated classically.
-- Modify the circuits so that they become classically simulable and test these modified circuits (note that this may also provide an inaccurate result).
+- Modify the circuits so that they become classically simulable, although less accurate.
 
 Stabilizer circuits, also known as Clifford circuits, are a useful tool for accomplishing this latter goal. These are a restricted class of quantum circuits that can be efficiently simulated classically. Specialized simulators can easily simulate stabilizer circuits with thousands of qubits. See [Efficient simulation of stabilizer circuits with Qiskit Aer primitives](stabilizer-circuit-simulation) for more information.
 
