Minor bug fixes in .mdx files

--- a/docs/run/rest-api-initialize-account.mdx
+++ b/docs/run/rest-api-initialize-account.mdx
@@ -57,7 +57,7 @@ logout_response = requests.post(logout_url, headers=headers)
 print("response ok?:",logout_response.ok,logout_response.text)
 ```
 
-This should yield an Authoritzation error (Error 401) once access token is invalidated.
+This should yield an Authoritzation error __Error 401__ once access token is invalidated.
 
 ```python
 logout_url = 'https://auth.quantum-computing.ibm.com/api/users/logout'
