add more details to the code example

--- a/docs/run/configure-error-mitigation.mdx
+++ b/docs/run/configure-error-mitigation.mdx
@@ -481,7 +481,16 @@ Example:
 Turn off all error mitigation and suppression in EstimatorV2.
 
 ```python
-from qiskit_ibm_runtime import EstimatorV2 as Estimator, Options
+from qiskit_ibm_runtime import EstimatorV2 as Estimator, Options, QiskitRuntimeService
+
+# Define the service.  This allows you to access IBM Quantum systems.
+service = QiskitRuntimeService()
+
+# Get a backend
+backend = service.least_busy(operational=True, simulator=False)
+
+# Define Estimator
+estimator = Estimator(backend)
 
 options = estimator.options
 
