also update Sampler primitive

--- a/docs/verify/simulate-with-qiskit-aer.ipynb
+++ b/docs/verify/simulate-with-qiskit-aer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "36bdf62f-cecb-4263-98f9-8504d01c223f",
+   "id": "4a4b88ed-d21f-4056-9264-0ee8c8ec4b39",
    "metadata": {},
    "source": [
     "# Exact and noisy simulation with Qiskit Aer primitives\n",
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "72d67934-c2fd-4207-a375-8dc7dfa1049c",
+   "id": "df70b5fd-971d-4e7d-a23a-8df037c0fa47",
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4031eec3-367e-466b-a553-8bbc212364fb",
+   "id": "2074eaf0-746e-4a36-91d9-db9228f96a0d",
    "metadata": {},
    "source": [
     "This circuit contains parameters to represent the rotation angles for $R_y$ and $R_z$ gates. When simulating this circuit, we need to specify explicit values for these parameters. In the next cell, we specify some values for these parameters and use the Estimator primitive from Qiskit Aer to compute the exact expectation value of the observable $ZZ \\cdots Z$."
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0ae02ad0-e05a-450c-828b-0390673b6567",
+   "id": "40270ca7-1084-4329-aac5-28c87edc3791",
    "metadata": {},
    "outputs": [
     {
@@ -70,14 +70,18 @@
    ],
    "source": [
     "from qiskit.quantum_info import SparsePauliOp\n",
+    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit_aer import AerSimulator\n",
     "from qiskit_aer.primitives import EstimatorV2 as Estimator\n",
     "\n",
     "observable = SparsePauliOp(\"Z\" * n_qubits)\n",
     "params = [0.1] * circuit.num_parameters\n",
     "\n",
     "exact_estimator = Estimator()\n",
-    "# Decompose the circuit once because Qiskit Aer doesn't recognize the EfficientSU2 gate\n",
-    "pub = (circuit.decompose(), observable, params)\n",
+    "# The circuit needs to be transpiled to the AerSimulator target\n",
+    "pass_manager = generate_preset_pass_manager(3, AerSimulator())\n",
+    "isa_circuit = pass_manager.run(circuit)\n",
+    "pub = (isa_circuit, observable, params)\n",
     "job = exact_estimator.run([pub])\n",
     "result = job.result()\n",
     "pub_result = result[0]\n",
@@ -87,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf824fc4-f391-41a2-a0f2-d724b5eb15bf",
+   "id": "134d97a2-8420-4931-85b4-324679655e24",
    "metadata": {},
    "source": [
     "Now, let's initialize a noise model that includes depolarizing error of 2% on every CX gate. In practice, the error arising from the two-qubit gates, which are CX gates here, are the dominant source of error when running a circuit. See [Build noise models](./building_noise_models) for an overview of constructing noise models in Qiskit Aer.\n",
@@ -98,13 +102,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "050f9710-f84a-41eb-ab39-4a7cd3eb23d8",
+   "id": "82b2f19a-ba10-46a2-ba1b-89cd27bc0e63",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7247404214143464"
+       "0.7247404214143465"
       ]
      },
      "execution_count": 3,
@@ -131,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aade4240-a76e-4496-8fe2-c071ecab0643",
+   "id": "6495f179-3fe6-4971-b023-700b8b2c8cbb",
    "metadata": {},
    "source": [
     "As you can see, the expectation value in the presence of the noise is quite far from the correct value. In practice, you can employ a variety of error mitigation techniques to counter the effects of the noise, but a discussion of these techniques is outside the scope of this article.\n",
@@ -150,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "46a4307f-f1e5-4bff-8fa1-7080165a3a53",
+   "id": "3c20f7bc-203a-4f40-bb84-7cf3d231d66e",
    "metadata": {},
    "outputs": [
     {
@@ -171,22 +175,44 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d22f17e0-0573-4ccd-987b-034ccb701fb8",
+   "id": "ef506e15-7480-46ba-bce7-aa8f2fa78377",
    "metadata": {},
    "source": [
-    "This value, 65%, gives a rough estimate of the probability that our final state is correct. It is a conservative estimate because it does not take into account the initial state of the simulation. To get a more concrete estimate of how much our final state deviates from the correct state, let's use the [Sampler](https://qiskit.org/ecosystem/aer/stubs/qiskit_aer.primitives.Sampler.html) primitive to estimate the final measurement probability distributions with and without noise, and then compute the fidelity between these distributions. When running the Sampler, we pass `shots=None` to request a final distribution that does not include random sampling error."
+    "This value, 65%, gives a rough estimate of the probability that our final state is correct. It is a conservative estimate because it does not take into account the initial state of the simulation.\n",
+    "\n",
+    "The following code cell shows how to use the Sampler primitive from Qiskit Aer to sample from the noisy circuit. We need to add measurements to the circuit before running it with the Sampler primitive."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9ef88083-7b5b-4dce-8d1f-49e3cf67d4b7",
+   "id": "76c43aee-d559-4e5b-8228-e5bba3b4499c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8917750028756501"
+       "{'00010010': 1,\n",
+       " '10111100': 1,\n",
+       " '11100000': 2,\n",
+       " '00001111': 2,\n",
+       " '01000000': 2,\n",
+       " '00001010': 2,\n",
+       " '11101111': 1,\n",
+       " '01011100': 1,\n",
+       " '00000000': 65,\n",
+       " '00000110': 3,\n",
+       " '00000101': 1,\n",
+       " '00011000': 1,\n",
+       " '00010100': 1,\n",
+       " '10100000': 2,\n",
+       " '11000000': 3,\n",
+       " '00100000': 1,\n",
+       " '00110000': 2,\n",
+       " '10000000': 3,\n",
+       " '00010000': 4,\n",
+       " '00011101': 1,\n",
+       " '00011110': 1}"
       ]
      },
      "execution_count": 5,
@@ -196,30 +222,25 @@
    ],
    "source": [
     "from qiskit.quantum_info import hellinger_fidelity\n",
-    "from qiskit_aer.primitives import Sampler\n",
+    "from qiskit_aer.primitives import SamplerV2 as Sampler\n",
     "\n",
     "measured_circuit = circuit.copy()\n",
     "measured_circuit.measure_all()\n",
     "\n",
-    "# Get exact probability distribution\n",
-    "exact_sampler = Sampler()\n",
-    "job = exact_sampler.run(measured_circuit, params, shots=None)\n",
-    "exact_quasis = job.result().quasi_dists[0]\n",
-    "exact_probs = exact_quasis.nearest_probability_distribution()\n",
-    "\n",
-    "# Get noisy probability distribution\n",
-    "noisy_sampler = Sampler(backend_options={\"noise_model\": noise_model})\n",
-    "job = noisy_sampler.run(measured_circuit, params, shots=None)\n",
-    "noisy_quasis = job.result().quasi_dists[0]\n",
-    "noisy_probs = noisy_quasis.nearest_probability_distribution()\n",
-    "\n",
-    "# Compute fidelity\n",
-    "hellinger_fidelity(exact_probs, noisy_probs)"
+    "noisy_sampler = Sampler(options=dict(backend_options=dict(noise_model=noise_model)))\n",
+    "# The circuit needs to be transpiled to the AerSimulator target\n",
+    "pass_manager = generate_preset_pass_manager(3, AerSimulator())\n",
+    "isa_circuit = pass_manager.run(measured_circuit)\n",
+    "pub = (isa_circuit, params, 100)\n",
+    "job = noisy_sampler.run([pub])\n",
+    "result = job.result()\n",
+    "pub_result = result[0]\n",
+    "pub_result.data.meas.get_counts()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "859b938f-4302-47cc-827f-4fd00dc17d19",
+   "id": "46a8c6b7-3f7c-48e4-9b73-b04a5458ba33",
    "metadata": {},
    "source": [
     "## Next steps\n",
