rename files and update links

--- a/docs/run/runtime-options-overview.mdx
+++ b/docs/run/runtime-options-overview.mdx
@@ -209,7 +209,7 @@ The Qiskit Runtime primitives expect to be called with circuits already suitable
 The Qiskit Runtime primitives may perform additional runtime compilation to optimize circuits, with the degree of optimization controlled by an optimization level option. The optimization level you choose affects the compilation strategy, with higher levels invoking more expensive or aggressive optimizations.
 
 See the Optimization level table in the
-[Runtime compilation topic](configure-runtime-compilation#set-the-optimization-level) for further details.
+[Configure error suppression topic](configure-error-suppression#set-the-optimization-level) for further details.
 
 <Tabs>
   <TabItem value="PrimV2" label="Estimator V2">
@@ -258,7 +258,7 @@ estimator = Estimator(session=backend, options=options)
 ```
 
 For more information and a complete list of advanced transpilation options, see the Advanced transpilation options table in the
-[Runtime compilation topic](configure-runtime-compilation#transpilation-table).
+[Configure error suppression topic](configure-error-suppression#transpilation-table).
   </TabItem>
 </Tabs>
 
@@ -321,7 +321,7 @@ estimator = Estimator(session=backend, options=options)
     - Find more details about the `Estimator` methods in the [Estimator API reference](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.Estimator#estimator).
     - Find more details about the `Sampler` methods in the [Sampler API reference](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.Sampler#sampler).
     - Find all available options in the [Options API reference](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.Options).
-    - Find details about [runtime compilation](configure-runtime-compilation) and [error mitigation](configure-error-mitigation).
+    - Find details about how to configure [error suppression](configure-error-suppression) and [error mitigation](configure-error-mitigation).
     - Learn how to transpile locally in the [Transpile](../transpile/) section.
     - Try the [Submit pre-transpiled circuits](https://learning.quantum.ibm.com/tutorial/submitting-user-transpiled-circuits-using-primitives) tutorial.
 </Admonition>
