--- a/docs/api/migration-guides/qiskit-runtime-examples.mdx
+++ b/docs/api/migration-guides/qiskit-runtime-examples.mdx
@@ -60,7 +60,7 @@ service = QiskitRuntimeService()
 # Get a backend
 backend = service.least_busy(operational=True, simulator=False)
 
-# Define Estimator  
+# Define Estimator
 estimator = Estimator(backend)
 
 # Run an expectation value calculation
@@ -77,10 +77,10 @@ from qiskit_ibm_runtime.fake_provider import FakeManilaV2
 # Run the sampler job locally using FakeManilaV2
 fake_manila = FakeManilaV2()
 
-# You can use a fixed seed to get fixed results. 
+# You can use a fixed seed to get fixed results.
 options = {"simulator": {"seed_simulator": 42}}
 
-# Define Estimator  
+# Define Estimator
 estimator = Estimator(backend=fake_manila, options=options)
 
 # Run an expectation value calculation
@@ -225,7 +225,7 @@ Output
   </TabItem>
 
   <TabItem value="legacy" label="backend.run()">
-The legacy workflow required additional elements and steps to compute an expectation value. The `QuantumInstance` class stored a `PassManager` and a `Backend` instance, and wrapped the conversion step to ISA circuits and `backend.run` calls.  The `CircuitSampler` class from `qiskit.opflow` wrapped the `QuantumInstance` `run` and `transpile` methods. This degree of nesting is no longer supported, the new workflow allows to access and directly manipulate all the key components of the computation (backend, pass manager, circuits and observables) at all stages of the algorithm. 
+The legacy workflow required additional elements and steps to compute an expectation value. The `QuantumInstance` class stored a `PassManager` and a `Backend` instance, and wrapped the conversion step to ISA circuits and `backend.run` calls.  The `CircuitSampler` class from `qiskit.opflow` wrapped the `QuantumInstance` `run` and `transpile` methods. This degree of nesting is no longer supported, the new workflow allows to access and directly manipulate all the key components of the computation (backend, pass manager, circuits and observables) at all stages of the algorithm.
 
 ``` python
 from qiskit.opflow import StateFn, PauliExpectation, CircuitSampler
@@ -256,7 +256,7 @@ expectation:  -1.065734058826613
 </Tabs>
 
 <span id="sampler-algorithm"></span>
-## Use Sampler to design an algorithm 
+## Use Sampler to design an algorithm
 
 The Sampler primitive is used to design an algorithm that samples
 circuits and extracts probability distributions.
@@ -286,7 +286,7 @@ difference is the format of the output: `backend.run()` outputs
     # Run
     result = backend.run(isa_circuits)
     ```
-    
+
     </TabItem>
 
 <TabItem value="aer" label="qiskit-aer">
@@ -334,10 +334,10 @@ from qiskit_ibm_runtime.fake_provider import FakeManilaV2
 # Run the sampler job locally using FakeManilaV2
 fake_manila = FakeManilaV2()
 
-# You can use a fixed seed to get fixed results. 
+# You can use a fixed seed to get fixed results.
 options = {"simulator": {"seed_simulator": 42}}
 
-# Define Sampler  
+# Define Sampler
 sampler = Sampler(backend=fake_manila, options=options)
 
 # Run calculation
@@ -366,7 +366,7 @@ When using the `Sampler` primitive, the circuit **must contain measurements**.
   <TabItem value="PrimV2" label="Runtime Sampler">
   ``` python
 from qiskit_ibm_runtime import SamplerV2 as Sampler
- 
+
 # Define a local backend
 from qiskit_ibm_runtime.fake_provider import FakeManilaV2
 backend = FakeManilaV2()
@@ -438,11 +438,11 @@ result = job.result()
 # Get results for the first (and only) PUB
 pub_result = result[0]
 
-# Get counts from the classical register "meas". 
+# Get counts from the classical register "meas".
 print(f" >> Meas output register counts: {pub_result.data.meas.get_counts()}")
 
->> Meas output register counts: {'0001': 210, '0010': 305, '0000': 282, '0011': 201, '0101': 2, '1010': 6, '0110': 5, '0100': 6, '1000': 3, '0111': 1, '1001': 2, '1011': 1} 
-```  
+>> Meas output register counts: {'0001': 210, '0010': 305, '0000': 282, '0011': 201, '0101': 2, '1010': 6, '0110': 5, '0100': 6, '1000': 3, '0111': 1, '1001': 2, '1011': 1}
+```
   </TabItem>
 
   <TabItem value="legacy" label="backend.run()">
@@ -502,7 +502,7 @@ to the following:
 <Admonition type="tip" title="Recommendations">
 - [Common use cases](qiskit-runtime-use-case)
 - [Migrate `backend.run` options to primitive options](qiskit-runtime-options)
-- [Setting execution options](../../run/advanced-runtime-options)
+- [Qiskit Runtime options overview](../../run/runtime-options-overview)
 - [Primitive execution options API reference](../qiskit-ibm-runtime/qiskit_ibm_runtime.options.Options)
 - [How to run a session](../../run/run-jobs-in-session)
 - [Qiskit Runtime local testing mode](../../verify/local-testing-mode)
