--- a/docs/run/minimize-time.mdx
+++ b/docs/run/minimize-time.mdx
@@ -12,7 +12,7 @@ There are several ways you can limit the amount of quantum time spent processing
 
 - Set limits on execution time:  You can limit how long each job or session runs.  For details, see [Maximum execution time for a Qiskit Runtime job or session](max-execution-time).
 
-- Use only the necessary settings for error suppression, error mitigation, and optimization, because higher values can cause your jobs to run longer. See [Algorithm tuning options](advanced-runtime-options), [Configure runtime compilation](configure-runtime-compilation), and [Configure error mitigation](configure-error-mitigation) for details.
+- Use only the necessary settings for error suppression, error mitigation, and optimization, because higher values can cause your jobs to run longer. See the [Qiskit Runtime options overview](runtime-options-overview), [Configure error suppression](configure-error-suppression), and [Configure error mitigation](configure-error-mitigation) for details.
 
 ## Next steps
 
