--- a/docs/transpile/index.mdx
+++ b/docs/transpile/index.mdx
@@ -7,7 +7,7 @@ description: Introduction to transpiling quantum circuits in the Qiskit SDK.
 
 # Introduction to transpilation
 
-Transpilation is the process of rewriting a given input circuit to match the topology of a specific quantum device, and optimize the circuit instructions for execution on noisy quantum systems.  This documentation covers the tooling and workflows for local transpilation available to all Qiskit users, as well as for the cloud-based [Qiskit transpiler service](qiskit-transpiler-service) available to Premium Plan users.  If you're using primitives and are only interested in the default transpilation options provided by the Qiskit Runtime service, read the [Configure runtime compilation for Qiskit Runtime](../run/configure-runtime-compilation) topic.
+Transpilation is the process of rewriting a given input circuit to match the topology of a specific quantum device, and optimize the circuit instructions for execution on noisy quantum systems.  This documentation covers the tooling and workflows for local transpilation available to all Qiskit users, as well as for the cloud-based [Qiskit transpiler service](qiskit-transpiler-service) available to Premium Plan users.  If you're using primitives and are only interested in the default transpilation options provided by the Qiskit Runtime service, read the [Configure error suppression for Qiskit Runtime](../run/configure-error-suppression) topic.
 
 The process of transpilation takes circuit that contains your instructions:
 
@@ -28,7 +28,7 @@ In addition to reducing the depth and complexity of quantum circuits, the transp
 
 
 <Admonition type="caution">
-  If you perform transpilation locally and submit the transpiled circuits to the Qiskit Runtime Estimator primitive, the service tries to apply additional optimizations by default, corresponding to `optimization_level=1` described [here](/run/configure-runtime-compilation#set-the-optimization-level). If you do not want the circuits further transformed, set the `optimization_level` to 0.
+  If you perform transpilation locally and submit the transpiled circuits to the Qiskit Runtime Estimator primitive, the service tries to apply additional optimizations by default, corresponding to `optimization_level=1` described in the [Configure error suppression](/run/configure-error-suppression#set-the-optimization-level) topic. If you do not want the circuits further transformed, set the `optimization_level` to 0.
 </Admonition>
 
 
