--- a/docs/start/setup-channel.mdx
+++ b/docs/start/setup-channel.mdx
@@ -51,8 +51,7 @@ Available plans:
 
 1. Retrieve your IBM Quantum token from the [IBM Quantum account page](https://quantum.ibm.com/account).
 
-<span id="save-account"></span>
-1. Authenticate to the service by calling `QiskitRuntimeService` with your IBM Quantum API key and CRN:
+1. <span id="save-account"></span>Authenticate to the service by calling `QiskitRuntimeService` with your IBM Quantum API key and CRN:
 
    ```python
    from qiskit_ibm_runtime import QiskitRuntimeService
